# proyecto-northwind

./: README.md  main.py  pyproject.toml
BaseDatos_Northwind/: northwind-data_Actualizado.sql  northwind-data_Actualizado_DatosExtra.sql  northwind-data_Usada.sql  para eliminar registro existentes.sql
BaseDatos_Northwind/Estructura de BD/: northwind EER.mwb
data/01_raw/: customers.csv  employees.csv  inventory_transactions.csv  invoices.csv  order_details.csv  order_details_status.csv  orders.csv  products.csv  purchase_order_details.csv  purchase_orders.csv  sales_reports.csv  shippers.csv  strings.csv  suppliers.csv
data/02_silver/: customers.csv  employees.csv  inventory_transaction_types.csv  inventory_transactions.csv  order_details.csv  order_details_status.csv  orders.csv  orders_status.csv  products.csv  purchase_order_details.csv  purchase_orders.csv  shippers.csv  suppliers.csv
data/03_gold/: dim_customers.csv  dim_date.csv  dim_employees.csv  dim_products.csv  dim_shippers.csv  dim_suppliers.csv  fact_inventory_movements.csv  fact_purchases.csv  fact_sales.csv
notebooks/: 01_bronze_raw_extract.ipynb  02_silver_clean.ipynb  03_gold_transform.ipynb
src/: __init__.py  config.py  database.py
