[project]
name = "proyecto-northwind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "googletrans==4.0.0rc1",
    "jupyter>=1.1.1",
    "legacy-cgi>=2.6.4",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.47",
    "tqdm>=4.67.3",
]
